wind-coding-conventions/fixtures/invalid/sample-impl/src/main/java/com/acme/order/service/impl/InMemoryOrderService.java
package com.acme.order.service.impl;

public class InMemoryOrderService {
}
